# rust-webgl-experiments

./: Cargo.toml  index.html  index.js  package-lock.json  webpack.config.js
src/: lib.rs
src/shaders/: fragment.glsl  vertex.glsl
